# origami-ai-router

./: .env.integration.toml  .env.load.toml  .env.regression.toml  .env.toml  .env.unit.toml  .gitignore  ACCURACY_REPORT.md  ADK_USAGE.md  ARCH_OVERVIEW.md  CUDA_SETUP.md  NOTICE  README.md  mkdocs.yml  pyproject.toml  rules.toml  rules_ops_sec.toml  test_config_dump.py
.github/workflows/: deploy-docs.yml
docs/: ARCH_OVERVIEW.md  RoutingFix.md  analysis_results.md  architecture-overview.md  composite-assessment.md  gemini-assesment.md  gemma12b-assesment.md  google-adk-best-practices.md  index.md  latest-logic.md  llama3b-assesment.md  mistral-assement.md  optimizations.md  router_performance_report.md
docs/architecture/: adk-best-practices.md  index.md  ops-sec.md  routing-fix.md  routing-logic.md
docs/evaluations/: analysis-results.md  ops-sec-evaluation.md  performance-report.md
docs/evaluations/models/: composite.md  gemini.md  gemma12b.md  llama3b.md  mistral.md
docs/setup/: cuda.md  optimizations.md
models/: fetch-models.sh
scratch/: debug_grammar_v2.py  performance_check.py
src/edgerouter/: __init__.py  main.py
src/edgerouter/routes/: auth.py
src/edgerouter/utils/: google_auth.py
src/origami_router/: docs.py  main.py  pipeline.py  state.py
src/origami_router/routes/: auth.py  health.py  readiness.py  route.py
tests/: __init__.py  conftest.py  router_performance_report.md
tests/data/: data.py  test_cases.toml  test_config.toml
tests/data/gemini/: test_config_gemini.toml
tests/data/llama/: test_config_llama_cpp.toml
tests/data/vllm/: test_config_vllm.toml
tests/integration/: __init__.py  conftest.py  data.py  test_adk_example.py  test_adk_preroute_example.py  test_cases.toml  test_config.toml  test_context_summary.py  test_edgerouter_api.py  test_ember_router_integration.py  test_gemini.py  test_gemini_load.py  test_gemma.py  test_gemma_load.py  test_regression.py
tests/integration/adk/: conftest.py  test_adk_example.py  test_adk_preroute_example.py
tests/integration/gemini/: conftest.py  test_config_gemini.toml  test_gemini.py  test_gemini_load.py
tests/integration/gemma/: test_config_gemma_cpp.toml  test_gemma_cpp.py  test_gemma_cpp_load.py
tests/integration/llama/: test_config_llama_cpp.toml  test_llama_cpp.py  test_llama_cpp_load.py
tests/integration/mistral/: test_config_mistral_cpp.toml  test_mistral_cpp.py  test_mistral_cpp_load.py
tests/integration/ops_sec/: test_ops_sec_integration.py
tests/integration/vllm/: test_config_vllm.toml
tests/load/: conftest.py  test_ember_load.py  test_gemini_load.py  test_gemma_cpp_load.py  test_llama_cpp_load.py  test_mistral_cpp_load.py  test_tiered_load.py
tests/regression/: conftest.py  test_regression.py
tests/unit/: conftest.py  test_context_summary_unit.py  test_ops_sec_routes.py  test_router_builder.py
