[project]
name = "edgerouter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ryan McGuinness", email = "rmcguinness@google.com" }
]
requires-python = "==3.13.*"
dependencies = [
    "common",
    "vllm-router",
    "llama-cpp-router",
    "gemini-router",
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "google-auth>=2.49.1",
    "google-adk>=1.27.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
edgerouter = "edgerouter:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
override-dependencies = [
    "grpcio-status==1.78.0",
    "grpcio==1.78.0",
]

[tool.uv.sources]
common = { workspace = true }
gemini-router = { workspace = true }
vllm-router = { workspace = true }
llama-cpp-router = { workspace = true }
stateless-router = { workspace = true }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::DeprecationWarning:opentelemetry.exporter.cloud_trace.*",
]
