[project]
name = "origami-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ryan McGuinness", email = "rmcguinness@google.com" }
]
requires-python = "==3.13.*"
dependencies = [
    "origami-common",
    "origami-vllm",
    "origami-llama-cpp",
    "origami-gemini",
    "origami-api",
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "google-auth>=2.49.1",
    "google-adk>=1.27.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
origami-router = "origami_router:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
override-dependencies = [
    "grpcio-status==1.78.0",
    "grpcio==1.78.0",
]

[tool.uv.sources]
origami-common = { workspace = true }
origami-gemini = { workspace = true }
origami-vllm = { workspace = true }
origami-llama-cpp = { workspace = true }
origami-stateless = { workspace = true }
origami-api = { workspace = true }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::DeprecationWarning:opentelemetry.exporter.cloud_trace.*",
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "load: marks tests as load tests",
    "regression: marks tests as regression tests"
]
